[package]
name = "my-calendar"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "buling-calendar"
identifier = "binghui.fxz"
short_description = "An rust calendar with chinese holidays."

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"